<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:cardCornerRadius="5dp"
        style="@style/CardView.DayNight"
        android:layout_marginHorizontal="6dp"
        android:layout_marginVertical="6dp"
        android:id="@+id/cardView"
        app:cardMaxElevation="16dp"
        android:animateLayoutChanges="true"
        app:cardElevation="0dp"
        app:cardBackgroundColor="?attr/colorOnCard">
    <!-- app:layout_constraintDimensionRatio="1:1" -->


    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stockTV"
                android:layout_weight="0"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="12dp"
                android:layout_marginTop="12dp" />

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_add_24"
                android:id="@+id/refillButton"
                android:background="?android:selectableItemBackgroundBorderless"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/expiryTV"
                android:layout_marginBottom="12dp"
                android:layout_marginEnd="12dp" />

        <Button
                android:layout_width="31dp"
                android:layout_height="0dp"
                android:id="@+id/colorDot"
                app:cornerRadius="8dp"
                android:insetBottom="4dp"
                android:insetTop="18dp"
                app:layout_constraintStart_toStartOf="parent"
                android:stateListAnimator="@null"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/nameTV"
                android:insetLeft="12dp"
                app:layout_constraintTop_toTopOf="parent"
                android:insetRight="5dp"
                app:layout_constraintBottom_toBottomOf="@+id/stockTV" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/nameTV"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textSize="18sp"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:text="Name"
                android:visibility="visible"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/stockTV"
                android:ellipsize="end"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="14sp"
                android:autoSizeTextType="uniform"
                app:layout_constraintStart_toEndOf="@+id/colorDot"
                android:layout_marginRight="5dp"
                android:layout_marginTop="12dp" />

        <TextView
                android:text="TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/lastTakenTV"
                app:layout_constraintStart_toStartOf="parent"
                android:autoSizeMinTextSize="11sp"
                android:autoSizeMaxTextSize="14sp"
                android:textColor="@android:color/tab_indicator_text"
                app:layout_constraintEnd_toStartOf="@+id/refillButton"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="12dp" />

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/expiryTV"
                app:layout_constraintStart_toStartOf="parent"
                android:autoSizeMinTextSize="11sp"
                android:autoSizeMaxTextSize="14sp"
                android:textColor="@android:color/tab_indicator_text"
                app:layout_constraintTop_toBottomOf="@+id/nameTV"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="6dp"
                android:visibility="visible"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
